fixed the navbar so it closes on mobile

--- a/src/Component/NavBar/NavBar.scss
+++ b/src/Component/NavBar/NavBar.scss
@@ -110,7 +110,6 @@
   }
 }
 .collapse {
-  height: 30rem;
   @include mobile-1 {
     height: 90vh;
   }
